fix overflow issues and extended body length & font mismatch

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 
+*{
+    border: 1px dashed blue;
+}
+
+p {
+    margin: 0;
+}
+
 
 body {
     font-family: "Google Sans", system-ui, -apple-system, 'Segoe UI';
@@ -18,7 +26,10 @@ svg {
     height: 30px;
     background-color: blue;
 }
+
 .sidebar {
+    min-height: 0;
+    overflow-y: auto;
     padding: 10px;
     border: 2px solid blue;
     grid-area: 1 / 1 / 3 / 2;
@@ -60,6 +71,7 @@ svg {
     
 
     .top-right {
+        font-weight: bold;
         &>* {
             border: 1px dashed red;
         }
@@ -79,6 +91,7 @@ svg {
         justify-content: end;
         gap: 5%;
         button {
+            color: white;
             height: 37.5%;
             width: 15%;
             box-sizing: border-box;
@@ -112,6 +125,7 @@ svg {
     }
 
     .bottom-left{
+        font-weight: bold;
         row-gap: 5%;
         column-gap: 7.5px;
         grid-template: 1fr 2fr / 1fr 7fr;
@@ -135,23 +149,43 @@ svg {
     }
 }
 
+
+
+
+
 .main {
+    min-height: 0;
+
+    background-color: rgb(128 128 128 / 0.1);
     display: grid;
     padding: 2%;
-    grid-template-columns: 1fr / 7fr 3fr;
+    column-gap: 35px;
+    grid-template: minmax(0,1fr) / 6fr 2fr;
+
     .left-main {
+        min-height: 0;
+        overflow-y:auto;
         display: flex;
         flex-direction: column;
-        gap: 1.5%;
+        align-items: start;
+        justify-content: start;
+        gap: 12.5px;
         .modules {
+            &>div {
+                border-radius: 10px;
+                border-left: 5px solid rgb(161, 196, 18);
+                background-color: white;
+                min-width:0;
+            }
             display: grid;
-            gap: 5%;
+            gap: 16px;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             &>div {
-                padding: 5%;
+                padding: 16px 20px;
                 display: grid;
                 p {
                     place-self: start;
+                    margin: 4px 0;
                 }
                 .icons{
                     justify-self: end;
@@ -160,6 +194,84 @@ svg {
             }
         }
     }
-    
+
+    .right-main {
+        min-height: 0;
+        overflow-y: auto;
+        display:grid;
+        grid-template-rows: minmax(0,1fr) minmax(0,1fr);
+        row-gap: 12.5px;
+
+        &>.announcement {
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            &>div {
+                padding: 35px;
+                border-radius: 15px;
+                background-color: white;
+                display: grid;
+                grid-template-rows: 1fr 1fr 1fr;
+                &>div+div {
+                    border-top: 1px solid rgb(128 128 128 / 0.5);
+                }
+                &>div {
+                    p {
+                        padding: 5px 0 0 0;
+                        margin: 0;
+                    }
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                    p:first-child{
+                        font-weight:bold;
+                    }
+                    p:nth-child(2) {
+                        color: rgb(88, 88, 88);
+                    }
+                }
+            }
+        }
+        &>.trending {
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            &>.content {
+                background-color: white;
+                border-radius: 15px;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                &>div {
+                    display: grid;
+                    grid-template: 1fr 1fr / 1fr 3.5fr;
+                    .avatar {
+                        width: 40px;
+                        height: 40px;
+                        grid-area: 1 / 1 / 3 / 2;
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+
+.heading, .major p, .minor p{
+    font-weight: bold;
+    font-size: 1.25rem;
+}
+
+.title, .dashboard{
+
+    font-weight: bold;
+    font-size: 1.8rem;
+}
+
+.description, .bio {
+    color: rgb(88, 88, 88);
 }
 
